<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.android.antheiabarcelona.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/antheia_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/slogan"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/product_photo"
            android:src="@drawable/antheia_logo" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_photo"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/logo"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/telephone"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginLeft="10sp"
            android:layout_toRightOf="@id/logo"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/address"
            android:orientation="horizontal">


            <Button
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="website"
                android:text="@string/instagram_link"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="location"
                android:text="@string/location"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>